--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 .company-name {
-  color: #ff0000;
+  color: #286819;
 }
 
 .nav {
@@ -20,11 +20,11 @@ html {
 
 .nav a:hover {
   background-color: #fff;
-  color: #ff0000;
+  color: #286819;
 }
 
 .nav a:focus {
-  outline: #000;
+  outline: 3px solid #000;
 }
 
 .masthead {
@@ -56,7 +56,7 @@ h2 {
   font-size: 3rem;
   margin: 0;
   color: black;
-  display: inline;
+
   line-height: 1.2;
   font-family: "Roboto Condensed", sans-serif;
 }
@@ -71,7 +71,7 @@ p {
   padding: .4em .75em .3em;
   border: 3px solid #333;
   display: inline-block;
-  background-color: #ff0000;
+  background-color: #286819;
   border-radius: 4px;
   color: white;
   text-decoration: none;
@@ -80,7 +80,7 @@ p {
 
 #current {
   background-color: #fff;
-  color: #ff0000;
+  color: #286819;
 }
 
 .btn-big {
@@ -89,7 +89,7 @@ p {
 
 .btn:hover {
   background-color: #fff;
-  color: #ff0000;
+  color: #286819;
   border-color: #000;
 }
 
@@ -107,12 +107,16 @@ footer {
 }
 
 .box {
-  background-color: #ff0000;
-  height: 20px;
+  background-color: #286819;
+  height: 60px;
   width: 100%;
 }
 
 .box-1-2 {
-  background-color: #ff0000;
+  background-color: #286819;
   width: 50%;
+}
+
+.about-us {
+  color: #fff;
 }
